Added Gold Pink h

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <option value="Gold Cyan">
                     <option value="Gold Red">
                     <option value="Gold Yellow">
+                    <option value="Gold Pink">
                     <option value="Gold Black">
                     <option value="Egyptian">
                     <option value="Beads">
