Added Blue Black h

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <option value="Gold Yellow">
                     <option value="Gold Pink">
                     <option value="Gold Black">
+                    <option value="Blue Black">
                     <option value="Egyptian">
                     <option value="Beads">
                 </datalist>
