Added Pink black h

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <option value="Gold Black">
                     <option value="Gold Blue">
                     <option value="Blue Black">
+                    <option value="Pink Black">
                     <option value="Egyptian">
                     <option value="Beads">
                 </datalist>
